chamber/styles/base.css
@import url('https://fonts.googleapis.com/css2?family=IM+Fell+French+Canon&family=Lato:ital,wght@0,400;0,700;1,400&display=swap');

/************************************************************
*
*               Variables
*
************************************************************/
:root {
  /* change the values below to your colors from your palette */
  --primary-color: #396E94   ;
  --secondary-color: #E7C24F ;
  --accent1-color: #A42212;
  --accent2-color: #C67B31;

  /* change the values below to your chosen font(s) */
  --heading-font: "IM Fell French Canon";
  --paragraph-font: Lato, Helvetica, sans-serif;

  /* these colors below should be chosen from among your palette colors above */
  --headline-color-on-white: #396E94;  /* headlines on a white background */ 
  --headline-color-on-color: white; /* headlines on a colored background */ 
  --paragraph-color-on-white: #396E94; /* paragraph text on a white background */ 
  --paragraph-color-on-color: white; /* paragraph text on a colored background */ 
  --paragraph-background-color: #396E94  ;
  --nav-link-color: #396E94;
  --nav-background-color: #D4AC0D;
  --nav-hover-link-color: white;
  --nav-hover-background-color: #396E94;
}

/************************************************************
*
*               GENERAL TEXT PROPERTIES
*
************************************************************/

h1, h2 {
    margin: 0;
}

h3, h4 {
    padding: 10px;
}

h1, h2, h3, h4, h5, h6 {
    font-family: var(--heading-font);
    color: var(--heading-color);
    letter-spacing: 3px;
    font-weight: 700;
}

h1 {
    font-size: 2.5rem;
}

h2 {
    font-size: 2rem;
}

p {
    text-align: left;
    font-family: var(--paragraph-font);
}

a {
    text-decoration: none;
    font-family: var(--paragraph-font);
}

ul{
    text-align: left;
}

li {
    font-family: var(--paragraph-font);
    color: var(--paragraph-color-on-white);
    font-size: 1.4rem;
}

nav li a{
    color: var(--paragraph-color-on-color);
}

footer section *{
    color: #333333
}

footer section a:hover{
    color: white;
    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
}

header h1{
    display: none;
}

/************************************************************
*
*               Header
*
************************************************************/

/*** HAEADER GENERIC RULES -and some other elements as main-***/
* {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
}

header, main, footer, nav {
	max-width: 1024px;
	margin: 0 auto;
}

header {
	background-color: var(--secondary-color);
	display: flex;
	align-items: center;
	justify-content: center;
	padding: 30px;
    margin: auto;
	position: relative; /* Make sure toggle button will be on left within header width */
}

/*** HEADER NOT NAV RULES ***/
header :not(nav){
    padding-inline: 5px; /*Enforce a slight separation between profile picture and h1*/
}

header img{
    width: 100px;
    filter: drop-shadow(0 0 0.09rem var(--accent1-color));
}

header h1{
	color: var(--text-color-on-color);
}

/* small view navigation */
#menu {
	border: 1px solid rgba(0,0,0,.3);
	padding: .25rem .75rem;
	background-color: #eee;
	color: #000;
	position: absolute;
	top: 1rem;
	right: 1rem;
}

#menu::before {
	content: "☰";
}

#menu.open::before {
	content: "X";
}

.navigation {
	display: flex;
	flex-direction: column;
	list-style: none;
	background-color: #333;
	color: #fff;
}

.navigation li {
	display: none;
}

.navigation li a {
	display: block;
	padding: 1rem;
	text-align: center;
	text-decoration: none;
}

.navigation li a:hover {
	background-color: var(--accent2-color);
	font-weight: 700; /* strength the font to highlight the option hovered */
}

/* when the button is clicked - the open class is toggle (added/removed) and accounted for here */
.open li {
	display: block;
	width: 100%;
}

.open li a {
	display: block;
}

/************************************************************
*
*               Dark Mode Transition
*
************************************************************/

.container-darkmode-toggle{
	position: absolute;
	top: 0.5rem;
	left: 1%;
}

body {
    transition: background-color 0.9s ease;
}

.switch {
	margin-top: 5px;
    position: relative;
    display: inline-table;
    width: 40px;
    height: 24px;
}

.switch input {
    opacity: 0;
    width: 0;
    height: 0;
}

.slider {
    position: absolute;
    cursor: pointer;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: white;
    -webkit-transition: .4s;
    transition: .4s;
    border-radius: 24px;
}

.slider:before {
    position: absolute;
    content: "";
    height: 16px;
    width: 16px;
    left: 4px;
    bottom: 4px;
    background-color: grey;
    -webkit-transition: .4s;
    transition: .4s;
    border-radius: 50%;
}

input:checked + .slider {
    background-color: var(--accent2-color);
}

input:focus + .slider {
    box-shadow: 0 0 1px var(--accent2-color);
}

input:checked + .slider:before {
    -webkit-transform: translateX(16px);
    -ms-transform: translateX(16px);
    transform: translateX(16px);
}

/* Dark Mode Styles */
.dark-mode-body {
    background-color: #333;
    color: #fff;
}

.dark-mode-nav {
    border: 2px solid white;
}

/************************************************************
*
*               Nav bar
*
************************************************************/

nav{
	background-color: var(--primary-color);
}

nav ul {
	list-style-type: none;
}

nav a {
	display: block;
	text-decoration: none;
    font: var(--paragraph-font);
    color: var(--text-color-on-color);
	text-align: center;
	padding: 1rem;
}

nav a:hover {
	border: 1px solid #fff;
    background-color: var(--accent2-color);
}

/************************************************************
*
*               Hero Image
*
************************************************************/

.hero {
	margin: 10px auto;
	position: relative;
	border: 1px solid rgba(0,0,0,.1);
	height: 300px;
}

.hero img {
	width: 100%;
	height: 100%;
	object-fit: cover;
}

.herolabel {
	position: absolute;
	top: 30px;
	left: 30px;
	background: radial-gradient(#fff, #4D5B97);
	border: 1px solid rgba(0,0,0,.75);
	padding: 1.5rem;
	box-shadow: 0 0 3rem #fff;
	opacity: 0.75;
}

.herolabel p {
	margin: 0;
	padding: .25rem;
	font-weight: 700;
	font-size: 2rem;
	font-family:"Great Vibes", serif;
}


/************************************************************
*
*               Footer
*
************************************************************/

#copyright p{
    font-size: 0.57em;
}

#internal-links li{
    font-size: 1.17em;
}

footer {
    background-color: var(--secondary-color);
    padding: 0.5px 0;
}

#internal-links li{
    list-style: none;
}


footer {
    background-color: var(--secondary-color);
    display: grid;
    grid-template-rows: repeat(3, 1fr);
}

